# aws-pick

./: .envrc  .gitignore  .prompt.md  AGENTS.md  CHANGELOG.md  LICENSE  README.md  aws_pick.py  pyproject.toml
.github/workflows/: ci-cd.yml  ci-preprod.yml  ci-prod.yml  ci.yml  release.yml  test.yml
aws_pick/: __init__.py  cli.py  config.py  shell.py
aws_profile_switcher/: shell.py
tests/: __init__.py  test_cli.py  test_config.py  test_shell.py
