[tool.poetry]
name = "aws-pick"
version = "1.3.0"
description = "A simple CLI tool to easily switch between AWS profiles in your shell environment"
authors = ["kkamji <kkamji@example.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/kkamji/aws-pick"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Utilities",
]
packages = [{include = "aws_pick"}]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.28.0"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
pytest-cov = "^4.1.0"

[tool.poetry.scripts]
awspick = "aws_pick.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
