[project]
name = "aws-pick"
version = "1.5.0"
description = "A simple CLI tool to easily switch between AWS profiles in your shell environment"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "kkamji", email = "kkamji@example.com" }
]
repository = "https://github.com/kkamji/aws-pick"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Utilities",
]
requires-python = ">=3.9"
dependencies = [
    "boto3>=1.28.0,<2.0.0",
    "rich>=13.0.0,<14.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1,<8.0.0",
    "black>=23.3.0,<24.0.0",
    "isort>=5.12.0,<6.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
]

[project.scripts]
awspick = "aws_pick.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"



[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
